--- a/TODO
+++ b/TODO
@@ -1,26 +1,18 @@
 In priority :
-	remove launch and command_lines from main.py
-	add a --list parameter witch accept a list of project_id if you don't want to scan all project
-	make the count of vulns ? a table or just printing it at the end of the scan
+	Do a better function for the Non compliances summary and add a non compliance summary by category
 
 Report :
-	There's a bug when functions finish at the same time, printing get fck, found how to resolve that
 	html/pdf ?
-
-make requirement file
-
-add more security check
- 	For functions which launch the same commands do something to speed things up
-
 
 Need to do some research (easy) : 
 	gce_instance_location -> Major
 	gce_target_https_proxy_ssl_policy
 	gce_target_ssl_proxy_ssl_policy
+	Being able to change user ? -> gcloud config set account
 
 Later, need some reasearch (hard) :
 	gce_firewallrule_traffic -> use loadbalancer pas en frontal
 	gce_router_nat_log
-
+	There's a bug when functions finish at the same time, printing get fck, found how to resolve that - check if it's still here ?
 	Try to catch error in threads
-	Being able to change user ? -> gcloud config set account
+	For functions which launch the same commands do something to speed things up
